--- a/src/main/resources/afficheurs.fxml
+++ b/src/main/resources/afficheurs.fxml
@@ -3,44 +3,67 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Button?>
+
 <GridPane maxHeight="400" maxWidth="400" minHeight="400" minWidth="400" prefHeight="400.0" prefWidth="400.0"
-          xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9" fx:controller="main.java.m3.view.Controller">
+          xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9" fx:controller="main.java.m3.view.Controller">   
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-    </rowConstraints>
-    <children>
-        <Label fx:id="a1" alignment="CENTER" prefHeight="209.0" prefWidth="240.0"
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <Label fx:id="a1" alignment="CENTER" prefHeight="156.0" prefWidth="156.0"  GridPane.rowIndex="1" 
                style="-fx-background-color: #DDDDDD; -fx-border-color: #555555;" text="0" textAlignment="CENTER"
                textFill="#323232" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
             <font>
                 <Font name="OpenSymbol" size="24.0"/>
             </font>
         </Label>
-        <Label fx:id="a2" alignment="CENTER" prefHeight="209.0" prefWidth="240.0"
+        <Label fx:id="a2" alignment="CENTER" prefHeight="156.0" prefWidth="156.0" GridPane.columnIndex="1" GridPane.rowIndex="1" 
                style="-fx-background-color: #DDDDDD; -fx-border-color: #555555;" text="0" textAlignment="CENTER"
-               textFill="#323232" GridPane.columnIndex="1">
+               textFill="#323232">
             <font>
                 <Font name="OpenSymbol" size="24.0"/>
             </font>
         </Label>
-        <Label fx:id="a3" alignment="CENTER" prefHeight="209.0" prefWidth="240.0"
+        <Label fx:id="a3" alignment="CENTER" prefHeight="156.0" prefWidth="156.0" GridPane.rowIndex="2"
                style="-fx-background-color: #DDDDDD; -fx-border-color: #555555;" text="0" textAlignment="CENTER"
-               textFill="#323232" GridPane.rowIndex="1">
+               textFill="#323232">
             <font>
                 <Font name="OpenSymbol" size="24.0"/>
             </font>
         </Label>
-        <Label fx:id="a4" alignment="CENTER" prefHeight="209.0" prefWidth="240.0"
+        <Label fx:id="a4" alignment="CENTER" prefHeight="156.0" prefWidth="156.0" GridPane.columnIndex="1" GridPane.rowIndex="2"
                style="-fx-background-color: #DDDDDD; -fx-border-color: #555555;" text="0" textAlignment="CENTER"
-               textFill="#323232" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               textFill="#323232">
             <font>
                 <Font name="OpenSymbol" size="24.0"/>
             </font>
         </Label>
-    </children>
+      
+      
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="150.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="68.0" minWidth="0.0" prefWidth="0.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <RadioButton mnemonicParsing="false" prefHeight="50.0" prefWidth="157.0" text="Atomique" />
+            <RadioButton mnemonicParsing="false" prefHeight="56.0" prefWidth="160.0" text="Séquentielle" GridPane.rowIndex="1" />
+            <RadioButton mnemonicParsing="false" prefHeight="56.0" prefWidth="160.0" text="A époque" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+      <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="166.0" text="Lancer" GridPane.columnIndex="1" />
+   </children>
 </GridPane>
