--- a/src/main/resources/afficheurs.fxml
+++ b/src/main/resources/afficheurs.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ToggleGroup?>
 
 <GridPane maxHeight="400" maxWidth="400" minHeight="400" minWidth="400" prefHeight="400.0" prefWidth="400.0"
           xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9" fx:controller="main.java.m3.view.Controller">   
@@ -16,6 +17,9 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <fx:define>
+		<ToggleGroup fx:id="algoButtons" />
+	</fx:define>
   </rowConstraints>
    <children>
       <Label fx:id="a1" alignment="CENTER" prefHeight="156.0" prefWidth="156.0"  GridPane.rowIndex="1" 
@@ -59,11 +63,11 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <RadioButton mnemonicParsing="false" prefHeight="50.0" prefWidth="157.0" text="Atomique" />
-            <RadioButton mnemonicParsing="false" prefHeight="56.0" prefWidth="160.0" text="Séquentielle" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" prefHeight="56.0" prefWidth="160.0" text="A époque" GridPane.rowIndex="2" />
+            <RadioButton fx:id="atomiqueButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="157.0" text="Atomique" selected="true" toggleGroup="$algoButtons"/>
+            <RadioButton fx:id="seqButton" mnemonicParsing="false" prefHeight="56.0" prefWidth="160.0" text="Séquentielle" GridPane.rowIndex="1" toggleGroup="$algoButtons"/>
+            <RadioButton fx:id="epoqueButton" mnemonicParsing="false" prefHeight="56.0" prefWidth="160.0" text="A époque" GridPane.rowIndex="2" toggleGroup="$algoButtons"/>
          </children>
       </GridPane>
-      <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="166.0" text="Lancer" GridPane.columnIndex="1" />
+      <Button fx:id="startButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="166.0" text="Lancer" GridPane.columnIndex="1" />
    </children>
 </GridPane>
